// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance should render correctly with main and secondary balance 1`] = `
<View
  style={
    {
      "flex": 1,
      "paddingHorizontal": 16,
      "paddingTop": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Bold",
        "fontSize": 18,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    Your balance
  </Text>
  <TouchableOpacity
    disabled={false}
    onLongPress={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 64,
      }
    }
    testID="asset-DAI"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "center",
          "position": "relative",
        }
      }
      testID="badge-wrapper-badge"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 20,
              "height": 40,
              "overflow": "hidden",
              "width": 40,
            }
          }
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source={
              {
                "uri": "https://static.cx.metamask.io/api/v1/tokenIcons/1/0x6b175474e89094c44da98b954eedeac495271d0f.png",
              }
            }
            style={
              {
                "flex": 1,
                "height": undefined,
                "width": undefined,
              }
            }
            testID="token-avatar-image"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "bottom": 0,
            "height": 0,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": "50%",
              "justifyContent": "center",
              "maxHeight": 24,
              "minHeight": 8,
              "opacity": 0,
            }
          }
          testID="badgenetwork"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#ffffff",
                "borderRadius": 8,
                "borderWidth": 2,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "shadowColor": "#0000001a",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 4,
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 32,
              }
            }
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={1}
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignContent": "flex-start",
          "alignItems": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "paddingLeft": 16,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Dai Stablecoin
        </Text>
      </View>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "Geist-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
        testID="token-amount-balance-test-id"
      >
        456
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexShrink": 0,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="balance-test-id"
      >
        123
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Balance should render correctly without a secondary balance 1`] = `
<View
  style={
    {
      "flex": 1,
      "paddingHorizontal": 16,
      "paddingTop": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Bold",
        "fontSize": 18,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    Your balance
  </Text>
  <TouchableOpacity
    disabled={false}
    onLongPress={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 64,
      }
    }
    testID="asset-DAI"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "center",
          "position": "relative",
        }
      }
      testID="badge-wrapper-badge"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 20,
              "height": 40,
              "overflow": "hidden",
              "width": 40,
            }
          }
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source={
              {
                "uri": "https://static.cx.metamask.io/api/v1/tokenIcons/1/0x6b175474e89094c44da98b954eedeac495271d0f.png",
              }
            }
            style={
              {
                "flex": 1,
                "height": undefined,
                "width": undefined,
              }
            }
            testID="token-avatar-image"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "bottom": 0,
            "height": 0,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": "50%",
              "justifyContent": "center",
              "maxHeight": 24,
              "minHeight": 8,
              "opacity": 0,
            }
          }
          testID="badgenetwork"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#ffffff",
                "borderRadius": 8,
                "borderWidth": 2,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "shadowColor": "#0000001a",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 4,
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 32,
              }
            }
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={1}
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignContent": "flex-start",
          "alignItems": "flex-start",
          "flex": 1,
          "flexDirection": "column",
          "paddingLeft": 16,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Dai Stablecoin
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "flex-end",
          "flexShrink": 0,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="balance-test-id"
      >
        123
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
